
Name:               NetSNMP
Version:            0.3.1.6
Synopsis:           Bindings for net-snmp's C API for clients
Description:        Network.Protocol.NetSNMP is a partial binding to the
                    library portion of the net-snmp package.  It uses the
                    'single-session api', which is claimed to be
                    thread-safe.  Not all operations are supported yet;
                    please contact the maintainer if you're in need of
                    expanded functionality, and especially if you would
                    like to contribute.
Category:           Network
Cabal-Version:      >= 1.8
License:            BSD3
License-file:       LICENSE
Author:             Pavlo Kerestey and Humane Software for Global Access Internet Services GmbH
Maintainer:         Pavlo Kerestey <pavlo@kerestey.net>
Stability:          alpha
Build-type:         Simple
Homepage:           https://github.com/ptek/netsnmp
Bug-reports:        https://github.com/ptek/netsnmp/issues

library
  hs-source-dirs:   src
  build-depends:    base >=4.5 && <5
                   ,bytestring >= 0.9 && < 0.11
                   ,utf8-string >= 0.3 && < 0.4
  build-tools:      hsc2hs
  exposed-modules:  Network.Protocol.NetSNMP
  extensions:       ForeignFunctionInterface, CPP, EmptyDataDecls
  extra-libraries:  netsnmp
  ghc-options:      -Werror -Wall -static -threaded -fno-warn-missing-signatures -fno-warn-unused-binds

test-suite tests
  hs-source-dirs:   tests
  extensions:       OverloadedStrings
  ghc-options:      -Wall -static -threaded -fno-warn-missing-signatures -fno-warn-unused-binds -fno-warn-unused-do-bind
  type:             exitcode-stdio-1.0
  main-is:          RunTests.hs
  build-depends:    base >= 4.5 && <5
                   ,bytestring >= 0.9 && < 0.11
                   ,utf8-string >= 0.3 && < 0.4
                   ,HUnit
                   ,NetSNMP
                   ,process > 1.1 && < 1.2
